--- a/image vb.html
+++ b/image vb.html
@@ -56,30 +56,43 @@
 		<button onclick='launchTumble90()'>basculer</button>
 		<button onclick='launchRotate()'>incliner</button>
 		<button onclick='launchCrop()'>tailler</button>
+		<input type='file' accept='image/png, image/jpg, image/bmp' />
+	<h1>sources</h1>
+	<a href='https://en.wikipedia.org/wiki/Data_URI_scheme'>wikipédia</a>
+	<a href='https://developer.mozilla.org/en-US/docs/Web/URI/Reference/Schemes/data#common_problems'>mozilla</a>
+	<a href='https://stackoverflow.com/questions/2516117/how-to-scale-an-image-in-data-uri-format-in-javascript-real-scaling-not-usin'>utiliser canvas</a>
 	</section>
 </body><script type='text/javascript'>
 	const frames = document.getElementsByTagName ('section');
 	const image = document.getElementsByTagName ('img')[0];
-//	const image = new Image();
-	// à modifier
-/*	const imgSrc = 'https://lh3.googleusercontent.com/pw/AP1GczN8avfqi_5KidqDIKhPOvkvYuXgExMJMVd2OafCFusNqex4driLGgWaUXkkD6mX5VY5WsFq29cUlAjbpedXE4i2jtHa0lIOPG2xJgGLE5XJOiW1hH8A46IR0Zy93f7P_wh9vVlQhPMwwdUDlqikg_BY=w985-h739';
-	const imgSrc = 'file:///C:/Users/deborah.powers/Desktop/cgi/photo-deborah-tournee.bmp';
-	const imgSrc = 'file:///C:/Users/LENOVO/Desktop/images divers/2025-05-18 tapis chinois aubusson b.jpg';
-	const imgSrc = 'file:///C:/Users/LENOVO/Desktop/images divers/yeti va.png';
-*/
-	const imgSrc = 'quadrillage.bmp';
-	image.src = imgSrc;
 	const canvas = document.getElementsByTagName ('canvas')[0];
 	const context = canvas.getContext ('2d');
-	if (image.height >600){
-		canvas.width = image.width *600/ image.height;
-		canvas.height = 600;
-		context.drawImage (image, 0,0, canvas.width, 600);
+	var imgSrc = 'quadrillage.bmp';
+	const uploader = document.getElementsByTagName ('input')[0];
+	uploader.addEventListener ('change', getUserImage);
+	function getUserImage (event){
+		imgSrc = URL.createObjectURL (event.target.files[0]);
+		image.src = imgSrc;
 	}
-	else{
-		canvas.width = image.width;
-		canvas.height = image.height;
-		context.drawImage (image, 0,0, image.width, image.height);
+	image.onload = function (event){
+		if (image.height >600){
+			canvas.width = image.width *600/ image.height;
+			canvas.height = 600;
+			context.drawImage (image, 0,0, canvas.width, 600);
+		}
+		else{
+			canvas.width = image.width;
+			canvas.height = image.height;
+			context.drawImage (image, 0,0, image.width, image.height);
+	}}
+	function launchTumble90(){
+		canvas.width = image.height;
+		canvas.height = image.width;
+		context.rotate (Math.PI /2);
+		context.drawImage (image, 0, - image.height);
+		newImgSrc = canvas.toDataURL();
+		image.src = newImgSrc;
+		frameCrop.style.backgroundImage = 'url("'+ newImgSrc +'")';
 	}
 	// bouger les lignes du frame de cropping
 	var movingLineX = null;
@@ -168,16 +181,6 @@
 		frames[1].style.display = 'none';
 		frames[2].style.display = 'block';
 	}
-	// basculer l'image à 90 degrés
-	function launchTumble90(){
-		canvas.width = image.height;
-		canvas.height = image.width;
-		context.rotate (Math.PI /2);
-		context.drawImage (image, 0, - image.height);
-		newImgSrc = canvas.toDataURL();
-		image.src = newImgSrc;
-		frameCrop.style.backgroundImage = 'url("'+ newImgSrc +'")';
-	}
 	// incliner l'image
 	var imgRotation =0;
 	function launchRotate(){
@@ -203,19 +206,16 @@
 		var ecartHeight =0;
 		// hauteur, imgRotation >0
 		if (imgRotation >0){
-			canvas.width = degreeTOcos (imgRotation) * image.width - degreeTOcos (90+ imgRotation) * image.height;
+			canvas.width = (degreeTOcos (imgRotation) - degreeTOcos (90+ imgRotation)) * image.width;
 			canvas.height = diag * (Math.sin (imgAngle + degreeTOradian (imgRotation)));
 			// TODO centrer l'image
-			ecartWidth = degreeTOcos (- imgRotation) * (canvas.width - image.width);
-			ecartHeight = degreeTOsin (- imgRotation) * (canvas.width - image.width);
-			/*
 			ecartWidth = degreeTOcos (- imgRotation) * image.width /2;
 			ecartHeight = degreeTOsin (- imgRotation) * image.height /2;
-			*/
+
 		}
 		else if (imgRotation <0){
 			canvas.width = diag * (Math.cos (imgAngle + degreeTOradian (imgRotation)));
-			canvas.height = degreeTOsin (90+ imgRotation) * image.height - degreeTOsin (imgRotation) * image.width;
+			canvas.height = (degreeTOsin (90+ imgRotation) - degreeTOsin (imgRotation)) * image.height;
 			// TODO centrer l'image
 		}
 		if (canvas.height >600){
